styles.css
html {
  font-family: 'Helvetiaca', sans-serif;
}

h1 {
  background-color: #333333;
  color: white;
  padding: 20px;
  text-align: center;
  margin-bottom: 1px;
}

ul {
  text-align: center;
  padding-left: 0px;
  margin-top: 0px;
}

aside {
  padding: 7px 0px;
  text-align: center;
  background-color: #ffd52b;
}

footer {
  background-color: black;
  color: white;
  height: 15px;
  text-align: center;
}

.btn {
  font-weight: bold;
  text-decoration: none;
  display: inline-block;
  list-style: none;
  background-color: rgb(211,211,211);
  padding: 15px 10px;
}

.banner {
  background-color: #74fcd2;
  padding: 15px 5px 15px;
}

.image {
  display: inline-block;
  margin: 15px 15px;
}

.btn>a {
  text-decoration: none;
  color: white;
}

.banner>span {
  font-weight: bold;
  border-bottom: 3px solid #ffd52b;
}

aside>a {
  padding: 0px 5px;
}

footer>h6 {
  font-weight: normal;
}

